--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=projekt1
 
-spring.datasource.url = jdbc:postgresql://dpg-cu96dclds78s73bf3oog-a.frankfurt-postgres.render.com:5432/ticketbase
+spring.datasource.url = jdbc:postgresql://dpg-cu96dclds78s73bf3oog-a.frankfurt-postgres.render.com:5432/newticketbase
 spring.datasource.username = ticketuser
 spring.datasource.password =${DATABASE_PASSWORD}
 
