Promjena URL-a baze zbog isteka prijašnje

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=projekt1
 
 spring.datasource.url = jdbc:postgresql://dpg-cu96dclds78s73bf3oog-a.frankfurt-postgres.render.com:5432/newticketbase
-spring.datasource.username = ticketuser
+spring.datasource.username = newticketuser
 spring.datasource.password =${DATABASE_PASSWORD}
 
 
